--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     </head>
     <body>
         <script>
-            /*document.addEventListener("deviceready", onDeviceReady, false);
+            document.addEventListener("deviceready", onDeviceReady, false);
             function onDeviceReady() {
                 window.open('http://noxpos.com', '_self', 'location=no');
                 //console.log("window.open works well");
-            }*/
+            }
         </script>
-        <h3>TEST!!!!!</h3>
         <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
