--- a/index.html
+++ b/index.html
@@ -6,13 +6,8 @@
         <title>NoxPOS</title>
     </head>
     <body>
-        <script>
-            document.addEventListener("deviceready", onDeviceReady, false);
-            function onDeviceReady() {
-                window.open('http://noxpos.com', '_self', 'location=no');
-                //console.log("window.open works well");
-            }
-        </script>
+        <h3>Teste</h3>
+        <iframe src="https://fr.wikipedia.org/wiki/Main_Page" width="640" height="480">
         <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
@@ -26,5 +21,12 @@
             }
         </style>
         <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>-->
+        <script>
+            /*document.addEventListener("deviceready", onDeviceReady, false);
+            function onDeviceReady() {
+                window.open('http://noxpos.com', '_self', 'location=no');
+                //console.log("window.open works well");
+            }*/
+        </script>
     </body>
 </html>
