--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h3>Teste</h3>
-        <iframe src="https://fr.wikipedia.org/wiki/Main_Page" width="640" height="480">
+        <iframe src="https://fr.wikipedia.org/wiki/Main_Page" width="640" height="480"></iframe>
         <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
