--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <h3>Teste</h3>
         <iframe src="https://fr.wikipedia.org/wiki/Main_Page" width="640" height="480"></iframe>
+         <iframe src="http://127.0.0.1/" width="640" height="480"></iframe>
         <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
