--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>NoxPOS</title>
 
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/apple-touch-icon-114x114.png">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
     <!-- UI FRAMEWORK STYLES -->
     <link type="text/css" rel="stylesheet" href="assets/css/wpos.css"/>
-    <link rel="stylesheet" href="/assets/css/jquery-ui-1.10.3.full.min.css"/>
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="assets/css/jquery-ui-1.10.3.full.min.css"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
     <!--[if IE 7]>
-    <link rel="stylesheet" href="/assets/css/font-awesome-ie7.min.css"/>
+    <link rel="stylesheet" href="assets/css/font-awesome-ie7.min.css"/>
     <![endif]-->
     <!-- fonts -->
-    <link rel="stylesheet" href="/assets/css/ace-fonts.css"/>
+    <link rel="stylesheet" href="assets/css/ace-fonts.css"/>
     <!-- ace styles -->
-    <link rel="stylesheet" href="/assets/css/ace.min.css"/>
-    <link rel="stylesheet" href="/assets/css/ace-rtl.min.css"/>
+    <link rel="stylesheet" href="assets/css/ace.min.css"/>
+    <link rel="stylesheet" href="assets/css/ace-rtl.min.css"/>
     <!--[if lte IE 8]>
-    <link rel="stylesheet" href="/assets/css/ace-ie.min.css"/>
+    <link rel="stylesheet" href="assets/css/ace-ie.min.css"/>
     <![endif]-->
-    <link rel="stylesheet" href="/assets/libs/datatables/datatables.min.css"/>
+    <link rel="stylesheet" href="assets/libs/datatables/datatables.min.css"/>
 
     <!-- Sweat Alert -->
     <link type="text/css" rel="stylesheet" href="assets/css/sweetalert.css"/>
     <!-- Ripples -->
-    <link type="text/css" rel="stylesheet" href="/assets/css/ripple.min.css"/>
+    <link type="text/css" rel="stylesheet" href="assets/css/ripple.min.css"/>
     <!-- Custom Syles -->
     <link type="text/css" rel="stylesheet" href="assets/css/custom.css"/>
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css"/>
@@ -40,7 +40,7 @@
 
     <!-- UI FRAMEWORK SCRIPTS -->
     <!--[if !IE]> -->
-        <script type="text/javascript" src="/assets/js/jquery-2.2.0.min.js"></script>
+        <script type="text/javascript" src="assets/js/jquery-2.2.0.min.js"></script>
     <!-- <![endif]-->
     <!--[if IE]>
         <script type="text/javascript" src="assets/js/jquery-1.10.2.min.js"></script>
@@ -48,35 +48,35 @@
     <script type="text/javascript">
         if ("ontouchend" in document) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>" + "<" + "/script>");
     </script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/typeahead-bs2.min.js"></script>
-    <script src="/assets/js/jquery-ui-1.10.3.full.min.js"></script>
-    <script src="/assets/js/jquery.mustache.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/typeahead-bs2.min.js"></script>
+    <script src="assets/js/jquery-ui-1.10.3.full.min.js"></script>
+    <script src="assets/js/jquery.mustache.js"></script>
 
     <!-- Wpos Libraries -->
-    <script type="text/javascript" src="/assets/js/wpos/core.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/sales.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/transactions.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/reports.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/print.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/orders.js"></script>
-    <script type="text/javascript" src="/assets/js/wpos/utilities.js"></script>
-    <script type="text/javascript" src="/assets/libs/webprint.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/core.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/sales.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/transactions.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/reports.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/print.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/orders.js"></script>
+    <script type="text/javascript" src="assets/js/wpos/utilities.js"></script>
+    <script type="text/javascript" src="assets/libs/webprint.js"></script>
     <!-- Websocket library -->
-    <script type="text/javascript" src="/assets/libs/socketio/socket.io-1.4.5.js"></script>
+    <script type="text/javascript" src="assets/libs/socketio/socket.io-1.4.5.js"></script>
     <!-- POS Keypad -->
-    <link type="text/css" href="/assets/libs/jquery-keypad/jquery.keypad.css" rel="stylesheet">
-    <script type="text/javascript" src="/assets/libs/jquery-keypad/jquery.plugin.min.js"></script>
-    <script type="text/javascript" src="/assets/libs/jquery-keypad/jquery.keypad.min.js"></script>
-    <script type="text/javascript" src="/assets/libs/jquery-keypad/jquery.keypad-pt-PT.js"></script>
+    <link type="text/css" href="assets/libs/jquery-keypad/jquery.keypad.css" rel="stylesheet">
+    <script type="text/javascript" src="assets/libs/jquery-keypad/jquery.plugin.min.js"></script>
+    <script type="text/javascript" src="assets/libs/jquery-keypad/jquery.keypad.min.js"></script>
+    <script type="text/javascript" src="assets/libs/jquery-keypad/jquery.keypad-pt-PT.js"></script>
     <!-- Datatables -->
-    <script src="/assets/libs/datatables/datatables.min.js"></script>
-    <script src="/assets/libs/datatables/datatableSorting.js"></script>
+    <script src="assets/libs/datatables/datatables.min.js"></script>
+    <script src="assets/libs/datatables/datatableSorting.js"></script>
 
     <!-- Sweat Alert -->
-    <script src="/assets/js/sweetalert.min.js"></script>
+    <script src="assets/js/sweetalert.min.js"></script>
     <!-- Ripples -->
-    <script src="/assets/js/ripple.min.js"></script>
+    <script src="assets/js/ripple.min.js"></script>
     <script>
         $.ripple(".btn,.iboxitem,.tab-menu", {
                 debug: false,
