--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>NoxPOS</title>
     </head>
     <body>
+        <script type="text/javascript" src="base.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
         <h3>Teste</h3>
         <iframe src="https://fr.wikipedia.org/wiki/Main_Page" width="640" height="480"></iframe>
         <!--<style>
