--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>NoxPOS</title>
     </head>
     <body>
-        <!--<script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
         <script>
             document.addEventListener("deviceready", onDeviceReady, false);
             function onDeviceReady() {
@@ -14,10 +14,10 @@
                 window.open('http://noxpos.com', '_blank', 'location=no');
                 //console.log("window.open works well");
             }
-        </script>-->
+        </script>
 
 
-    <style>
+    <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
             }
@@ -29,6 +29,6 @@
                 width: 100vw;
             }
         </style>
-        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>
+        <iframe src="https://www.wikipedia.org/" style="">Your browser doesn't support iFrames.</iframe>-->
     </body>
 </html>
