--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             document.addEventListener("deviceready", onDeviceReady, false);
             function onDeviceReady() {
                // window.href = "http://10.1.9.117";
-                window.open('http://noxpos.com', '_self', 'location=no');
+                window.open('http://noxpos.com', '_blank', 'location=no');
                 //console.log("window.open works well");
             }
         </script>
