--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
-        <script>
+        <!--<script>
             document.addEventListener("deviceready", onDeviceReady, false);
             function onDeviceReady() {
                // window.href = "http://10.1.9.117";
                 window.open('http://noxpos.com', '_blank', 'location=no');
                 //console.log("window.open works well");
             }
-        </script>
+        </script>-->
 
 
-    <!--<style>
+    <style>
             body {
                 margin: 0;            /* Reset default margin */
             }
@@ -29,6 +29,6 @@
                 width: 100vw;
             }
         </style>
-        <iframe src="https://www.wikipedia.org/" style="">Your browser doesn't support iFrames.</iframe>-->
+        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>
     </body>
 </html>
