--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <body>
         <script type="text/javascript" src="/www/WinJS/js/base.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <!--<script>
-            document.addEventListener("deviceready", onDeviceReady, false);
-            function onDeviceReady() {
-               // window.href = "http://10.1.9.117";
-                window.open('http://noxpos.com', '_blank', 'location=no');
-                //console.log("window.open works well");
-            }
-        </script>-->
+        <script>
+           var ref = cordova.InAppBrowser.open('http://noxpos.com', '_blank', 'location=no');
+           window.open = cordova.InAppBrowser.open;
+        </script>
 
 
-    <style>
+    <!--<style>
             body {
                 margin: 0;            /* Reset default margin */
             }
@@ -30,6 +26,6 @@
                 width: 100vw;
             }
         </style>
-        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>
+        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>-->
     </body>
 </html>
