--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <script type="text/javascript" src="/www/WinJS/js/base.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script>
+        <!--<script>
            var ref = cordova.InAppBrowser.open('http://noxpos.com', '_blank', 'location=no');
            window.open = cordova.InAppBrowser.open;
-        </script>
+        </script>-->
 
 
-    <!--<style>
+    <style>
             body {
                 margin: 0;            /* Reset default margin */
             }
@@ -26,6 +26,6 @@
                 width: 100vw;
             }
         </style>
-        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>-->
+        <iframe src="http://noxpos.com" style="">Your browser doesn't support iFrames.</iframe>
     </body>
 </html>
