--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         document.addEventListener("deviceready", onDeviceReady, false);
         function onDeviceReady() {
             window.open = cordova.InAppBrowser.open;
-            var ref = cordova.InAppBrowser.open('http://noxpos.com', '_self', 'location=yes');
+            var ref = cordova.InAppBrowser.open('http://noxpos.com', '_blank', 'location=yes');
         }
         </script>
 
