--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>NoxPOS</title>
     </head>
     <body>
+        <script type="text/javascript" src="/www/WinJS/js/base.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
         <script type='text/javascript'>
         window.onload = function() {
             setTimeout(function(){
